[package]
name = "vis2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.8.2"
glium = "0.30"
winit = "*"
imgui-winit-support = "0.8.2"
imgui-glium-renderer = "0.8.2"
regex = "*"
cocoa = "*"
